storing the user shift id in local storage and fixing the notification bubble issue where the animation duration is not connected to the javascript also added the popup screen for the declare starting amount and declare closing amount

--- a/MyShop/web/css/all.scss
+++ b/MyShop/web/css/all.scss
@@ -16,7 +16,8 @@ button,input{
     border-radius: 10px;
     border:none;
 }
-button.longButton{
+button.longButton, button.submit{
+    position: relative;
     width: 90%;
 }
 
@@ -60,19 +61,18 @@ input{
 }
 @keyframes showNotification{
     0%{top:100vh;}
-    10%{top:90vh;}
-    90%{top:90vh;}
+    3%{top:90vh;}
+    95%{top:90vh;}
     100%{top:100vh;}
 }
-
 .active{
     animation-name: showNotification;
-    animation-duration: 4s;
+    //animation-duration: 4s;
 }
-
-
-
-
+.passive{
+    display: none;
+    box-shadow: none;
+}
 
 //login page
 div#loginPanel{
@@ -130,6 +130,38 @@ div.loginFields{
     font-weight: bold;
 }
 //
+
+#popUp{
+    position: fixed;
+    top:0px;
+    left: 0px;
+    z-index: 50;
+    height: 100vh;
+    width:100vw;
+    background-color: rgba(0,0,0,0.2);
+    //opacity: 0.2;
+}
+#popUp div#popUpPanel{
+    position: fixed;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    z-index: 100;
+    min-width: 300px;
+    min-height: 300px;
+    background-color: white;
+    border-radius: 20px;
+    display: inline-flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    flex-flow: column;
+    .header{
+        padding:10px;
+        margin-bottom: 20px;
+    }
+}
+
+
 
 
 //fontweights
